fix(contract): 로직 수정